# quickwit

./: .dockerignore  LICENSE-3rdparty.csv
.clusterfuzzlite/: Dockerfile  build.sh
.github/workflows/: ci.yml  clusterfuzzlite-batch.yml  clusterfuzzlite.yml  coverage.yml  pipenv.requirements.txt
e2e/starrocks/: .gitignore  README.md  REPORT.md  docker-compose.yml  run.sh
e2e/starrocks/data/: events.ndjson
e2e/starrocks/nginx/: nginx.conf
e2e/starrocks/proxy/: Dockerfile  es_compat_proxy.py
e2e/starrocks/quickwit/: index_config.yaml
e2e/starrocks/scripts/: probe_es_api.sh
e2e/starrocks/starrocks/: create_catalog.sql  queries.sql
quickwit/: Cargo.toml  deny.toml
quickwit/fuzz/fuzz_targets/: fuzz_datetime.rs  fuzz_doc_mapper.rs  fuzz_query_dsl.rs
quickwit/quickwit-datetime/src/: date_time_parsing.rs
quickwit/quickwit-fuzz/: Cargo.toml
quickwit/quickwit-fuzz/fuzz_targets/: fuzz_doc_mapper.rs  fuzz_doc_mapper_config.rs  fuzz_java_datetime_format.rs  fuzz_otlp_logs.rs  fuzz_otlp_spans.rs  fuzz_query_string.rs
quickwit/quickwit-ingest/src/ingest_v2/: router.rs  routing_table.rs
quickwit/quickwit-ui/: package.json
quickwit/rest-api-tests/: Pipfile
